<resources>
    <string name="app_name">Strip Reader</string>
    <string name="analysis_complete_title">Analysis Complete</string>
    <string name="analysis_result_label">Result: </string>
    <string name="analysis_control_label">Strip status: </string>
    <string name="analysis_complete_detected">Positive</string>
    <string name="analysis_complete_no_tb">Negative</string>
    <string name="analysis_complete_control_good">Functioning</string>
    <string name="analysis_complete_control_bad">Defective</string>
    <string name="score">Score: %d</string>
    <string name="error_title">Error</string>
    <string name="error_msg_opencv_fail_process">Failed to process the image, please try again.</string>
    <string name="action_settings">Settings</string>
    <string name="patient">Patient</string>
    <string name="control">Control</string>
    <string name="title_activity_start">Project Tide</string>
    <string name="title_activity_calibrate">Calibrate</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="title_activity_strip_mask_configuration">Strip Mask Configuration</string>
    <string name="configuration_instruction">Drag the mask into place</string>
    <string name="configure">Adjust Mask</string>
    <string name="capture">Capture</string>
    <string name="version">Version</string>
    <string name="health_centre_name">Health centre name:</string>
    <string name="visually_observed_score">Visually observed score:</string>
    <string name="score_0">0</string>
    <string name="score_1">1</string>
    <string name="score_2">2</string>
    <string name="score_3">3</string>
    <string name="score_4">4</string>
    <string name="score_5">5</string>
    <string name="save_data">Save Data</string>
    <string name="health_centre_name_request">Please fill in the Health Centre Name</string>
    <string name="missing_information">Missing Information</string>
    <string name="observed_value_request">Please select the score you observed.</string>
    <string name="check_in_with_server">Check in with Server</string>
    <string name="no_wifi_title">Please connect to the wifi</string>
    <string name="no_wifi_message">You are not connected to the internet. Please turn on the phone\'s wifi.</string>
    <string name="remote_server">FILL IN YOUR SERVER HERE</string>
    <string name="host_unreachable_title">Cannot connect to the server.</string>
    <string name="host_unreachable_message">The server where the data and the latest app version is kept is not currently available. Please try again later.</string>
    <string name="unanalysed">Unanalysed</string>
</resources>
