<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lateralimaging.stripreader.Analysis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AnalysisComplete"
            android:text="@string/analysis_complete_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/analysis_control_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtControlResult"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/analysis_result_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtResult"/>

        </LinearLayout>

        <TextView
            style="@style/UserInputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_centre_name"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtHealthCentre"
            android:inputType="text" />

        <TextView
            style="@style/UserInputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visually_observed_score"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp">
            <RadioButton android:id="@+id/rdoZero"
                style="@style/RadioButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_0"
                />
            <RadioButton android:id="@+id/rdoOne"
                style="@style/RadioButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_1"
                />
            <RadioButton android:id="@+id/rdoTwo"
                style="@style/RadioButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_2"
                />
            <RadioButton android:id="@+id/rdoThree"
            style="@style/RadioButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_3"
            />
            <RadioButton android:id="@+id/rdoFour"
            style="@style/RadioButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_4"
            />
        </RadioGroup>
        <Button
            style="@style/Button"
            android:id="@+id/btnSaveData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_data"/>
    </LinearLayout>


</FrameLayout>
